Changes from Ant 1.6.3beta1 to current Ant 1.6 CVS version
==========================================================

Changes that could break older environments:
--------------------------------------------

Other changes:
--------------

* <rpm> has new attributes failonerror and quiet.

Fixed bugs:
-----------

* SQL task would try access result sets of statements that didn't
  return any, causing problems with Informix IDS 9.2 and IBM DB2 8.1
  FixPak 6 (or later). Bugzilla Reports 27162 and 29954.

* make sure that Zip and its derivates call the createEmptyZip method when
 there are no resources to zip/jar/...

* ant.bat was missing runAntNoClasspath label for goto.
  Bugzilla 34510.


Changes from Ant 1.6.2 to Ant 1.6.3beta1
========================================

Changes that could break older environments:
--------------------------------------------

* The subant task used the canonical version of a file path. This
  has been changed to use the absolute path. Bugzilla 30438.

* Tar now writes two EOF blocks rather than one.
  Bugzilla report 28776

* The Reference object now has a project field which it uses in preference
  to the project passed in. This allows composite references to be
  handled to nested projects.
  Bugzilla report 25777

* <junit> with filtertrace="true" will now also swallow lines for the
  sun.reflect package.  If you need to see them in your stack trace,
  you must set filtertrace to false.
  Bugzilla Report 22758

* The jikes compiler adapter now supports -bootclasspath, -extdirs and
  -sourcepath and also uses the same logic for debug flags as javac.
  This means, the jikes compiler adapter now requires Jikes 1.15 or later.
  Bugzilla Reports 25868, 26404 and 32609.

* Targets with identical name work in imported project. Bugzilla Report 34566.

Other changes:
--------------

* <javadoc> can now take an attribute 'executable'. Bugzilla report 30606.

* New attribute ignorecontents for <different> selector
