@@ -1,5 +1,5 @@
 /*
- * Copyright  2001-2004 The Apache Software Foundation
+ * Copyright  2001-2005 The Apache Software Foundation
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -60,10 +60,6 @@ public class Gcj extends DefaultCompilerAdapter {
         // so we'll emulate it for compatibility and convenience.
         classpath.addExtdirs(extdirs);
 
-        if (bootclasspath == null || bootclasspath.size() == 0) {
-            // no bootclasspath, therefore, get one from the java runtime
-            includeJavaRuntime = true;
-        }
         classpath.append(getCompileClasspath());
 
         // Gcj has no option for source-path so we
@@ -122,10 +118,10 @@ public class Gcj extends DefaultCompilerAdapter {
     public boolean isNativeBuild() {
         boolean nativeBuild = false;
         String[] additionalArguments = getJavac().getCurrentCompilerArgs();
-        int argsLength=0;
+        int argsLength = 0;
         while (!nativeBuild && argsLength < additionalArguments.length) {
             int conflictLength = 0;
-            while (!nativeBuild 
+            while (!nativeBuild
                    && conflictLength < CONFLICT_WITH_DASH_C.length) {
                 nativeBuild = (additionalArguments[argsLength].startsWith
                                (CONFLICT_WITH_DASH_C[conflictLength]));
@@ -136,8 +132,8 @@ public class Gcj extends DefaultCompilerAdapter {
         return nativeBuild;
     }
 
-    private static final String [] CONFLICT_WITH_DASH_C = { 
-        "-o" , "--main=", "-D", "-fjni", "-L" 
+    private static final String [] CONFLICT_WITH_DASH_C = {
+        "-o" , "--main=", "-D", "-fjni", "-L"
     };
 
 }
